# uldum

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  game.json
docs/: ability-system.md  audio.md  build-targets.md  coordinates.md  design.md  editor.md  effects.md  engine-model.md  gameplay-model.md  i18n.md  input-system.md  items.md  map-system.md  model-format.md  network.md  packaging.md  platform.md  scripting.md  terrain.md  ui.md
engine/config/: destructable_types.json  engine.json  item_types.json  unit_types.json
engine/models/: test_triangle.gltf
engine/scripts/: api.lua  common.lua  constants.lua
engine/shaders/: hud.frag  hud.vert  mesh.frag  mesh.vert  particle.frag  particle.vert  selection_circle.frag  selection_circle.vert  shadow.vert  skinned_mesh.frag  skinned_mesh.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert  terrain_shadow.vert  triangle.vert  ui_shell.frag  water.frag  water.vert  world_overlay.frag  world_overlay.vert
maps/action_test.uldmap/: hud.json  manifest.json
maps/test_map.uldmap/: hud.json  manifest.json  (+1 more)
sample_game/: .gitignore  README.md  game.cmake  game.json  keystore.properties.example
scripts/: build.bat  build.ps1  build_all.bat  build_android.bat  build_android.ps1  build_android_game.ps1  build_dev.bat  build_dev.ps1  build_editor.bat  build_editor.ps1  build_game.bat  build_game.ps1  build_server.bat  build_server.ps1  convert_skybox.py  png_to_ktx2.bat  png_to_ktx2.ps1  regen_overlay_textures.ps1  test_multiplayer.bat  test_multiplayer.ps1  test_server.bat  test_server.ps1
src/: CMakeLists.txt
src/app/: CMakeLists.txt  android_main.cpp  app.cpp  app.h  dev_app.cpp  dev_app.h  dev_console.cpp  dev_console.h  dev_main.cpp  engine.cpp  engine.h  game_main.cpp  main.cpp  server_main.cpp
src/asset/: CMakeLists.txt  asset.cpp  asset.h  config.cpp  config.h  file_io.h  model.cpp  model.h  texture.cpp  texture.h  upk.cpp  upk.h
src/audio/: CMakeLists.txt  audio.cpp  audio.h
src/core/: CMakeLists.txt  allocator.cpp  allocator.h  handle.h  hash.cpp  hash.h  log.cpp  log.h  settings.cpp  settings.h  types.h
src/editor/: CMakeLists.txt  asset_panel.cpp  asset_panel.h  editor.cpp  editor.h  editor_overlays.cpp  editor_overlays.h  file_explorer.cpp  file_explorer.h  main.cpp
src/hud/: CMakeLists.txt  action_bar.h  cast_indicator.h  command_bar.h  display_message.h  font.cpp  font.h  hud.cpp  hud.h  hud_impl.h  hud_loader.cpp  hud_loader.h  hud_network.cpp  hud_network.h  inventory.h  joystick.h  layout.h  minimap.h  node.cpp  node.h  pickup_bar.h  text_tag.h  world.cpp  world.h
src/i18n/: CMakeLists.txt  locale.cpp  locale.h
src/input/: CMakeLists.txt  action_preset.cpp  action_preset.h  command.h  command_system.cpp  command_system.h  input_bindings.cpp  input_bindings.h  input_preset.cpp  input_preset.h  picking.cpp  picking.h  rts_preset.cpp  rts_preset.h  selection.cpp  selection.h
src/map/: CMakeLists.txt  map.cpp  map.h  map_format.cpp  placements_bin.cpp  placements_bin.h  terrain_data.cpp  terrain_data.h
src/network/: CMakeLists.txt  enet_transport.cpp  enet_transport.h  game_server.cpp  game_server.h  lobby.h  network.cpp  network.h  protocol.h  transport.h
src/platform/: CMakeLists.txt  platform.h
src/platform/android/: android_platform.cpp  android_platform.h
src/platform/linux/: linux_platform.cpp
src/platform/windows/: win32_platform.cpp  win32_platform.h
src/render/: CMakeLists.txt  animation.cpp  animation.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  effect.cpp  effect.h  glow_system.cpp  glow_system.h  gpu_mesh.cpp  gpu_mesh.h  gpu_texture.cpp  gpu_texture.h  material.h  particles.cpp  particles.h  procedural_skeleton.cpp  procedural_skeleton.h  renderer.cpp  renderer.h  selection_circles.cpp  selection_circles.h  shadow.cpp  shadow.h  terrain.cpp  terrain.h  world_overlays.cpp  world_overlays.h
src/render/hud/: font.cpp  font.h  hud_renderer.cpp  hud_renderer.h  world.cpp  world.h
src/render/shaders/gles/: glow.frag  glow.vert  hud.vert  hud_text.frag  mesh.frag  mesh.vert  mesh_mask.frag  particle.frag  particle.vert  shadow.frag  shadow.vert  shadow_mask.frag  shadow_mask.vert  skinned_mesh.frag  skinned_mesh.vert  skinned_shadow.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert  terrain_shadow.vert  ui_shell.frag  water.frag  water.vert  world_overlay.frag  world_overlay.vert
src/render/shaders/vulkan/: glow.frag  glow.vert  hud.frag  hud_text.frag  mesh.frag  mesh.vert  mesh_mask.frag  model_view.frag  model_view.vert  model_view_skinned.vert  particle.frag  shadow.frag  shadow.vert  shadow_mask.frag  shadow_mask.vert  skinned_mesh.frag  skinned_shadow.vert  terrain.frag  terrain_shadow.vert  ui_shell.frag  ui_shell.vert  water.frag  water.vert  world_overlay.frag
src/rhi/: CMakeLists.txt  command_list.h  handles.h  rhi.h  types.h
src/rhi/detail/: slot_table.h
src/rhi/gles/: command_list.cpp  gles_records.h  gles_rhi.cpp  gles_rhi.h
src/rhi/vulkan/: command_list.cpp  vulkan_rhi.cpp  vulkan_rhi.h
src/script/: CMakeLists.txt  script.cpp  script.h  script_check.cpp  script_check.h
src/server/: CMakeLists.txt  server_main.cpp  worker_main.cpp
src/shell/: CMakeLists.txt  file_interface.cpp  file_interface.h  render_interface.cpp  render_interface.h  shell.cpp  shell.h  system_interface.cpp  system_interface.h
src/simulation/: CMakeLists.txt  ability_def.cpp  ability_def.h  command.h  command_system.cpp  command_system.h  components.h  entity_allocator.h  entity_types.h  fog_of_war.cpp  fog_of_war.h  handle_allocator.h  handle_types.h  order.h  pathfinding.cpp  pathfinding.h  selection.cpp  selection.h  simulation.cpp  simulation.h  sparse_set.h  spatial_query.cpp  spatial_query.h  systems.cpp  systems.h  type_registry.cpp  type_registry.h  vision.cpp  vision.h  world.cpp  world.h
src/tools/: CMakeLists.txt  gen_overlay_textures.cpp  pack_main.cpp
src/ui/: CMakeLists.txt  file_interface.cpp  file_interface.h  render_interface.cpp  render_interface.h  shell.cpp  shell.h  system_interface.cpp  system_interface.h
(+118 files in other folders)
